# IntelliTutor_AI

./: README.md
AI Homework Evaluation Assistant/Projects/IntelliTutor AI/: Readme.md  pyproject.toml
AI Homework Evaluation Assistant/Projects/IntelliTutor AI/src/repository/: error_repository.py  schema.py
AI Homework Evaluation Assistant/Projects/IntelliTutor AI/src/router/: router.py
AI Homework Evaluation Assistant/Projects/IntelliTutor AI/src/utils/: api_response.py  helpers.py
AI Homework Evaluation Assistant/src/agent/: prompts.py
AI Homework Evaluation Assistant/src/models/: model.py
AI Homework Evaluation Assistant/src/repository/: database.py
AI Homework Evaluation Assistant/src/tools/: tools.py
AI Homework Evaluation Assistant/src/utils/: constants.py  logger.py
AI Homework Evaluation Assistant/src/utils/exceptions/: error_codes.py
IntelliTutor AI/: Readme.md  main.py  pyproject.toml  settings.py
IntelliTutor AI/src/agent/: quiz_agent.py  review_agent.py  route_agent.py
IntelliTutor AI/src/service/: homework_service.py
IntelliTutor AI/src/utils/exceptions/: custom_app_exception.py
