[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.68",
    "dependencies>=7.7.1",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-aws>=1.4.0",
    "langchain-core>=1.2.19",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=0.3",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg-binary>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "python-a2a>=0.5.10",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
